[package]
name = "ip_lookup"
version = "0.1.1"
edition = "2021"

[profile.release]


[dependencies]
rand = "0.9.0"
axum = {version="0.8.1"}
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
strum_macros = "0.26.1"
axum-macros = "0.5.0"
axum-response-cache = "0.2.0"
futures = "0.3.31"
config = "0.15.7"
rayon = "1.5"